@@ -298,9 +298,11 @@ int	send_proxyconfig(zbx_sock_t *sock, struct zbx_json_parse *jp)
 		zabbix_log(LOG_LEVEL_DEBUG, "%s",
 				j.buffer);
 
+		alarm(CONFIG_TIMEOUT);
 		if (FAIL == (res = zbx_tcp_send(sock, j.buffer)))
 			zabbix_log(LOG_LEVEL_WARNING, "Error while sending configuration. %s",
 					zbx_tcp_strerror());
+		alarm(0);
 	}
 	zbx_json_free(&j);
 exit:
