@@ -23,6 +23,9 @@
 #include "common.h"
 #include "comms.h"
 
+extern int	CONFIG_TIMEOUT;
+extern int	CONFIG_TRAPPER_TIMEOUT;
+
 #define AGENT_VALUE	struct zbx_agent_value_t
 
 AGENT_VALUE
